# CCPPlanner

./: .clang-format  CMakeLists.txt  README.md
include/: eigen_adapted.hpp  geometry_typedef.hpp
src/: complete_coverage_planner.cc  complete_coverage_planner.h  contour_mode.cc  contour_mode.h  float_equal.hpp  geometry_operator.hpp  mode_base.cc  mode_base.h  zigzag_mode.cc  zigzag_mode.h
tests/: CMakeLists.txt  assets.h  experiment.cc  save_svg.hpp
